--- a/index.html
+++ b/index.html
@@ -4,9 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hot Gadgets</title>
-    a <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Product</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+            </li>
+          </ul>
+
+    </div>   
+
+      <div class="logo">
+        <img src="images/logo.png" alt="..." class="img-thumbnail">
+      </div>
+
+
+
+     <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="col-md-7">
+                  <h1>Mackbook Pro</h1>
+                  <p>Contrary to popular belief,Lorem ipsum is not simply random text.It has roots in a piece classical Latin literature</p>
+                  <h1>$2000</h1>
+                  <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="col-md-5">
+                    <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <div class="carousel-item">
+               <div class="col-md-7">
+                <h1>Google Home</h1>
+                <p>Contrary to popular belief,Lorem ipsum is not simply random text.It has roots in a piece classical Latin literature</p>
+                <h1>$276</h1>
+                <button class="buy-now-button">Buy Now</button>
+               </div>
+               <div class="col-md-5">
+                <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+               </div>
+              </div>
+              <div class="carousel-item">
+                <div class="col-md-7">
+                    <h1>JBL Xtreme 2</h1>
+                    <p>Contrary to popular belief,Lorem ipsum is not simply random text.It has roots in a piece classical Latin literature</p>
+                    <h1>$350</h1>
+                    <button class="buy-now-button">Buy Now</button>
+                </div>
+                <div class="col-md-5">
+                    <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+     </div>
+
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
